apps/opentelemetry-demo/obs/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opentelemetry-demo
  namespace: opentelemetry-demo
spec:
  parentRefs:
  - name: main-gateway
    namespace: istio-system
  hostnames:
  - opentelemetry-demo.saadisfy.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-proxy
      port: 8080
